update package name to morphereum-community-admin-interface

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "admin-interface",
+  "name": "morphereum-community-admin-interface",
   "private": true,
   "version": "0.0.0",
   "type": "module",
